@@ -762,11 +762,7 @@
   <module id="gnomeradio">
     <branch id="HEAD"/>
   </module>
-  <module id="gnomescan">
-    <_description>GnomeScan</_description>
-    <svnroot>svn://svn.gna.org/svn</svnroot>
-    <svnmodule>gnomescan</svnmodule>
-    <svnweb>http://svn.gna.org/viewcvs/gnomescan/</svnweb>
+  <module id="gnome-scan">
     <branch id="HEAD"/>
   </module>
   <module id="gnome-schedule">
