@@ -187,6 +187,7 @@
     <module id="gnome-pilot"/>
     <module id="gnome-pilot-conduits"/>
     <module id="gnome-pkgview"/>
+    <module id="gnome-scan"/>
     <module id="gnome-schedule"/>
     <module id="gnome-sharing"/>
     <module id="gnome-spell"/>
