@@ -1,3 +1,8 @@
+2007-04-19  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Added gnome-scan module in extras.
+
 2007-04-17  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
